tests for dao, service, multi-module